--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -51,8 +51,8 @@ jobs:
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout ${GITHUB_REF#refs/heads/}
           current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date}/ && mkdir -p reports/owasp_dependency_check/${current_date}/
-          cp -R ${{github.workspace}}/reports ./reports/owasp_dependency_check/${current_date}/
+          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
+          cp -R ${{github.workspace}}/reports ./reports/owasp_dependency_check/${current_date}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
           git push origin ${GITHUB_REF#refs/heads/}
@@ -66,7 +66,7 @@ jobs:
           cd ${{secrets.NAME_REPO_GIT}}
           git checkout develop
           current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date}/ && mkdir -p reports/owasp_dependency_check/${current_date}/
+          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
           cp -R ${{github.workspace}}/reports reports/owasp_dependency_check/${current_date}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
