--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -74,7 +74,7 @@ jobs:
           cp -R ${{github.workspace}}/report_json.json reports/zap_baseline_scan/${current_date}/
           cp -R ${{github.workspace}}/report_md.md reports/zap_baseline_scan/${current_date}/
           git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
           
       - name: Remove ZAP Baseline Reports 
@@ -119,7 +119,7 @@ jobs:
           cp -R ${{github.workspace}}/report_json.json reports/zap_full_scan/${current_date}/
           cp -R ${{github.workspace}}/report_md.md reports/zap_full_scan/${current_date}/
           git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
 
       - name: Remove ZAP Full Scan Reports 
@@ -164,5 +164,5 @@ jobs:
           rm -rf reports/nikto/${current_date} && mkdir -p reports/nikto/${current_date}
           cp -R ${{github.workspace}}/nikto_out.json reports/nikto/${current_date}/
           git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }}"
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
