change URL to homolog URL

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://homolog-password-manager-api-e0f4d2b888e5.herokuapp.com
+REACT_APP_API_URL_HML=https://homolog-password-manager-api-e0f4d2b888e5.herokuapp.com
+REACT_APP_API_URL_PROD=
