--- a/.github/workflows/cd_prod.yaml
+++ b/.github/workflows/cd_prod.yaml
@@ -1,4 +1,7 @@
 name: CD_PROD
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID_PROD }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
 
 on: 
   push:
