--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -33,44 +33,10 @@ jobs:
           project: 'tcc-password-manager'
           path: './'
           format: 'HTML'
-          out: 'reports'
+          out: '${{github.workspace}}'
           args: >
             --failOnCVSS 7
             --enableRetired
-
-      - name: Upload Test results
-        uses: actions/upload-artifact@v4
-        with:
-           name: Depcheck report
-           path:  ${{github.workspace}}
-
-      - name: Save Deṕcheck Report on Branch
-        if: always()
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout ${GITHUB_REF#refs/heads/}
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
-          cp -R ${{github.workspace}}/reports ./reports/owasp_dependency_check/${current_date}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin ${GITHUB_REF#refs/heads/}
-      
-      - name: Save Depcheck Report on Develop
-        if: always()
-        run: |
-          if [ ! -d "${{secrets.NAME_REPO_GIT}}" ]; then
-            git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          fi
-          cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
-          cp -R ${{github.workspace}}/reports reports/owasp_dependency_check/${current_date}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin develop
       
       - name: Comment on PR with OWASP Dependency Check results
         uses: actions/github-script@v5
@@ -87,3 +53,39 @@ jobs:
               issue_number: context.issue.number,
               body: '## OWASP Dependency Check Results\n\n' + report,
             });
+
+
+      - name: Upload Test results
+        uses: actions/upload-artifact@v4
+        with:
+           name: Depcheck report
+           path:  ${{github.workspace}}
+
+      - name: Save Deṕcheck Report on Branch
+        if: always()
+        run: |
+          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+          cd ${{secrets.NAME_REPO_GIT}}
+          git checkout ${GITHUB_REF#refs/heads/}
+          current_date=$(date +%Y-%m-%d)
+          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
+          cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
+          git add .
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
+          git push origin ${GITHUB_REF#refs/heads/}
+      
+      - name: Save Depcheck Report on Develop
+        if: always()
+        run: |
+          if [ ! -d "${{secrets.NAME_REPO_GIT}}" ]; then
+            git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
+          fi
+          cd ${{secrets.NAME_REPO_GIT}}
+          git checkout develop
+          current_date=$(date +%Y-%m-%d)
+          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
+          cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
+          git add .
+          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
+          git push origin develop
+      
