#17 feat: change depcheck report location

--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -33,7 +33,7 @@ jobs:
           project: 'tcc-password-manager'
           path: './'
           format: 'HTML'
-          out: '${{github.workspace}}'
+          out: '.'
           args: >
             --failOnCVSS 7
             --enableRetired
