#17 feat: change depcheck report location

--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
-          git checkout ${GITHUB_REF#refs/heads/}
+          git fetch && git checkout ${GITHUB_REF#refs/heads/}
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
           cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
