--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -2,7 +2,7 @@ name: CI_BUILD_SAST
 
 on:
   pull_request:
-    branches: [develop]
+    branches: [19-add-snyk]
 
 jobs:
   build_and_sca:
@@ -44,3 +44,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Run Codacy Analysis CLI
+        if: always()
+        uses: codacy/codacy-analysis-cli-action@master
+        with:
+          output: results.sarif
+          format: sarif
+          # Adjust severity of non-security issues
+          gh-code-scanning-compat: true
+          # Force 0 exit code to allow SARIF file generation
+          # This will hand over control about PR rejection to the GitHub side
+          max-allowed-issues: 2147483647
