--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -45,16 +45,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Run Codacy Analysis CLI
+      - name: Run Codacy Analysis
         if: always()
         uses: codacy/codacy-analysis-cli-action@master
+        continue-on-error: true
         with:
           output: results.sarif
           format: sarif
-          # Adjust severity of non-security issues
           gh-code-scanning-compat: true
-          # Force 0 exit code to allow SARIF file generation
-          # This will hand over control about PR rejection to the GitHub side
           max-allowed-issues: 2147483647
       
       - name: Upload SARIF results file
