fix: testing legitify
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/legitify.yaml
+++ b/.github/workflows/legitify.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Legitify Action
         uses: Legit-Labs/legitify@main
         with:
-          github_token: ${{ secrets.PAT_FOR_LEGITIFY }}
+          github_token: ${{ secrets.TOKEN_GIT }}
           ignore-policies: |
              non_admins_can_create_public_repositories
              requires_status_checks
