fix: testing legitify
Co-authored-by: nYCSTs <lucascandradex@protonmail.com>

--- a/.github/workflows/legitify.yaml
+++ b/.github/workflows/legitify.yaml
@@ -7,6 +7,10 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
       - name: Legitify Action
         uses: Legit-Labs/legitify@main
