--- a/.github/workflows/legitify.yaml
+++ b/.github/workflows/legitify.yaml
@@ -19,3 +19,12 @@ jobs:
           ignore-policies: |
              non_admins_can_create_public_repositories
              requires_status_checks
+          upload_code_scanning: true
+    
+      - name: "Upload SARIF as Code Scanning Results"
+        if: ${{ inputs.upload_code_scanning == 'true' }}
+        continue-on-error: true
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: legitify-output.sarif
+          category: "legitify-report"
