--- a/.github/workflows/legitify.yaml
+++ b/.github/workflows/legitify.yaml
@@ -8,9 +8,7 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
+      security-events: write
     steps:
       - name: Legitify Action
         uses: Legit-Labs/legitify@main
