--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Create .env
         run: |
             touch ./scripts/.env
-            echo TOKEN=${{ secrets.API_TOKEN_GITHUB }} >> ./scripts/.env
+            echo TOKEN=${{ secrets.TOKEN_GIT }} >> ./scripts/.env
             echo RELEASE_MAJOR=${{ contains(github.event.pull_request.labels.*.name, 'MAJOR RELEASE') }} >> ./scripts/.env
             echo RELEASE_MINOR=${{ contains(github.event.pull_request.labels.*.name, 'MINOR RELEASE') }} >> ./scripts/.env
             echo RELEASE_PATCH=${{ contains(github.event.pull_request.labels.*.name, 'PATCH RELEASE') }} >> ./scripts/.env
