--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "tcc-password-manager",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,8 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "bootstrap": "3.1",
+    "dotenv": "^16.4.5",
+    "octokit": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
