--- a/.github/workflows/cd_hml_dast.yaml
+++ b/.github/workflows/cd_hml_dast.yaml
@@ -5,7 +5,7 @@ env:
 
 on:
   push:
-    branches: [develop]
+    branches: [19-add-snyk]
 
 defaults:
   run:
@@ -51,9 +51,10 @@ jobs:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: '-a'
+          cmd_options: >
+            - addoninstall accessControl
+            - a
           allow_issue_writing: 'true'
-          fail_action: 'true'
           artifact_name: 'zap_baseline_scan'
 
       - name: Upload Zap Baseline Scan Report to Action
@@ -96,9 +97,10 @@ jobs:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: '-a'
+          cmd_options: >
+            - addoninstall accessControl
+            - a
           allow_issue_writing: 'true'
-          fail_action: 'true'
           artifact_name: 'zap_full_scan'
 
       - name: Upload Zap Full Scan Report to Action
