feat: test depcheck

--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -51,6 +51,11 @@ jobs:
           args: >
             --enableRetired
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
+      
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: dependency-check-report.sarif
 
       # - name: Zip report
       #   run: |
@@ -81,4 +86,4 @@ jobs:
         with:
           message: |
             Hello World!
-          # filePath: depcheck.zip
+          filePath: Depcheck report.zip
