--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -3,6 +3,8 @@ name: SCA Tests
 on:
   push:
     branches: [17-analyze-reports]
+  pull_request:
+    branches: [develop]
 
 jobs:
   sca_depcheck:
@@ -55,7 +57,7 @@ jobs:
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: dependency-check-report.sarif
+          sarif_file: depcheck/dependency-check-report.sarif
 
       # - name: Zip report
       #   run: |
@@ -80,10 +82,12 @@ jobs:
       #     git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
       #     git push origin ${GITHUB_REF#refs/heads/}
 
-
       - name: PR comment with file
         uses: thollander/actions-comment-pull-request@v2
+        env:
+          PR_NUMBER: ${{ github.event.number }}
         with:
           message: |
             Hello World!
           filePath: Depcheck report.zip
+          pr_number: $PR_NUMBER
