--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -10,6 +10,8 @@ jobs:
   sca_depcheck:
     name: 'Owasp Dependency Check'
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
 
     steps:
       - name: Checkout Repository
