--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "type": "module",
-  "type": "module",
   "name": "tcc-password-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@octokit/core": "^6.1.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,14 +15,14 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "bootstrap": "3.1",
-    "dotenv": "^16.4.5",
-    "octokit": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
