--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment: 
       PORT: 3000
     volumes:
-      - ./:/code
-      - node_modules:/code/node_modules
+      - .:/app
+      - /app/node_modules
     networks: 
       - frontend_password_manager
 
