fix: fix dast tests

--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -1,10 +1,6 @@
 name: DAST
 
-on:
-  workflow_run:
-    workflows: [CD_HOMOLOG]
-    types:
-      - completed
+on: workflow_call
 
 defaults:
   run:
