--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -12,7 +12,7 @@ defaults:
     shell: bash
 
 jobs:
-  deploy_homolog_and_dast:
+  deploy_homolog:
     environment: homolog
     name: 'Deploy to homolog'
     runs-on: ubuntu-latest
@@ -40,4 +40,5 @@ jobs:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
   
   call-workflow-dast:
+    needs: deploy_homolog
     uses: ./.github/workflows/dast.yaml
