--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -11,6 +11,11 @@ jobs:
     name: 'zap_baseline_scan'
     runs-on: ubuntu-latest
 
+    - name: Config GitHub
+        run: |
+          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+          git config --global user.name "${{secrets.GIT_USER_NAME}}"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
