--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -1,4 +1,4 @@
-name: CD_HOMOLOG
+name: HOMOLOG
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -39,6 +39,6 @@ jobs:
         run: |
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
   
-  call-workflow-dast:
-    needs: deploy_homolog
-    uses: ./.github/workflows/dast.yaml
+  # call-workflow-dast:
+  #   needs: deploy_homolog
+  #   uses: ./.github/workflows/dast.yaml
