fix: fix dast tests

--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -2,7 +2,7 @@ name: DAST
 
 on:
   workflow_run:
-    workflows: ["HOMOLOG"]
+    workflows: [HOMOLOG]
     branches: [develop]
     types: 
       - completed
