--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -7,19 +7,29 @@ defaults:
     shell: bash
 
 jobs:
-  zap_baseline:
-    name: 'zap_baseline_scan'
+  config_git:
+    name: 'config_git'
     runs-on: ubuntu-latest
-
-    - name: Config GitHub
-        run: |
-          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
-          git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+    
+    - name: Config GitHub
+      run: |
+        git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+        git config --global user.name "${{secrets.GIT_USER_NAME}}"
       
+
+  zap_baseline:
+    name: 'zap_baseline_scan'
+    runs-on: ubuntu-latest
+    needs: config_git
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
@@ -66,6 +76,7 @@ jobs:
   zap_full_scan:    
     name: 'zap_full_scan'
     runs-on: ubuntu-latest
+    needs: config_git
 
     steps:
       - name: Checkout
@@ -116,6 +127,7 @@ jobs:
   nikto:
     name: 'nikto'
     runs-on: ubuntu-latest
+    needs: config_git
 
     steps:
       - name: Create nikto report file
