--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -40,4 +40,5 @@ jobs:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
   
   call-workflow-dast:
+    needs: deploy_homolog
     uses: ./.github/workflows/dast.yaml
