--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -37,8 +37,7 @@ jobs:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: >
-            - a
+          cmd_options: '-a'
           allow_issue_writing: 'true'
           artifact_name: 'zap_baseline_scan'
 
@@ -50,7 +49,6 @@ jobs:
             ${{ github.workspace }}/report_html.html
             ${{ github.workspace }}/report_md.md
             ${{ github.workspace }}/report_json.json
-            ${{ github.workspace }}/report_sarif.sarif
 
       - name: Save ZAP Baseline Scan Reports
         if: always()
