--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -42,3 +42,8 @@ jobs:
   dast:
     needs: deploy_homolog
     uses: ./.github/workflows/dast.yaml
+    with:
+      git_user_email: ${{ secrets.GIT_USER_EMAIL }}
+      git_user_name: ${{ secrets.GIT_USER_NAME }}
+      token_git: ${{ secrets.TOKEN_GIT }}
+      
