--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -40,8 +40,16 @@ jobs:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
   
   dast:
+    name: 'dast'
+    runs-on: ubuntu-latest
     needs: deploy_homolog
-    uses: ./.github/workflows/dast.yaml
-    with:
-      token_git: "${{ secrets.TOKEN_GIT }}"
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Workflow call
+        uses: ./.github/workflows/dast.yaml
+        with:
+          token_git: "${{ secrets.TOKEN_GIT }}"
       
