--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -40,5 +40,5 @@ jobs:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
     
   dast:
-    uses: ./.github/workflows/dast.yml
+    uses: ./.github/workflows/dast.yaml
     secrets: inherit
