--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -7,9 +7,15 @@ defaults:
     shell: bash
 
 jobs:
-  config_git:
-    name: 'config_git'
-    runs-on: ubuntu-latest
+  # config_git:
+  #   name: 'config_git'
+  #   runs-on: ubuntu-latest
+    
+  #   steps:
+  #     - name: Config GitHub
+  #       run: |
+  #         git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+  #         git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
   zap_baseline:
     name: 'zap_baseline_scan'
