--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -7,19 +7,20 @@ defaults:
     shell: bash
 
 jobs:
-  # config_git:
-  #   name: 'config_git'
-  #   runs-on: ubuntu-latest
+  config_git:
+    name: 'config_git'
+    runs-on: ubuntu-latest
     
-  #   steps:
-  #     - name: Config GitHub
-  #       run: |
-  #         git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
-  #         git config --global user.name "${{secrets.GIT_USER_NAME}}"
+    steps:
+      - name: Config GitHub
+        run: |
+          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+          git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
   zap_baseline:
     name: 'zap_baseline_scan'
     runs-on: ubuntu-latest
+    needs: config_git
 
     steps:
       - name: Checkout
@@ -70,6 +71,7 @@ jobs:
   zap_full_scan:    
     name: 'zap_full_scan'
     runs-on: ubuntu-latest
+    needs: config_git
 
     steps:
       - name: Checkout
@@ -120,6 +122,7 @@ jobs:
   nikto:
     name: 'nikto'
     runs-on: ubuntu-latest
+    needs: config_git
 
     steps:
       - name: Create nikto report file
