--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -40,5 +40,6 @@ jobs:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
     
   dast:
+    needs: deploy_homolog
     uses: ./.github/workflows/dast.yaml
     secrets: inherit
