--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Config GitHub
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
@@ -27,6 +30,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: develop
+      
+      - name: Config GitHub
+        run: |
+          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+          git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
@@ -106,9 +114,7 @@ jobs:
           git checkout develop
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/zap_full_scan/${current_date} && mkdir -p reports/zap_full_scan/${current_date}
-          cp -R ${{github.workspace}}/report_html.html reports/zap_full_scan/${current_date}/
           cp -R ${{github.workspace}}/report_json.json reports/zap_full_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_md.md reports/zap_full_scan/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
