--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -10,20 +10,26 @@ jobs:
   config_git:
     name: 'config_git'
     runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
-      - name: Config GitHub
-        run: |
-          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
-          git config --global user.name "${{secrets.GIT_USER_NAME}}"
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Config GitHub
+      run: |
+        git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+        git config --global user.name "${{secrets.GIT_USER_NAME}}"
+
+    - name: Cache Git Config
+      uses: actions/cache@v2
+      with:
+        path: ~/.gitconfig
+        key: git-config
 
   zap_baseline:
     name: 'zap_baseline_scan'
     runs-on: ubuntu-latest
-    needs: config_git
+    needs: git_config
 
     steps:
       - name: Checkout
@@ -31,10 +37,10 @@ jobs:
         with:
           ref: develop
       
-      - name: Config GitHub
-        run: |
-          git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
-          git config --global user.name "${{secrets.GIT_USER_NAME}}"
+      # - name: Config GitHub
+      #   run: |
+      #     git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
+      #     git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
@@ -63,9 +69,7 @@ jobs:
           git checkout develop
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/zap_baseline_scan/${current_date} && mkdir -p reports/zap_baseline_scan/${current_date}
-          cp -R ${{github.workspace}}/report_html.html reports/zap_baseline_scan/${current_date}/
           cp -R ${{github.workspace}}/report_json.json reports/zap_baseline_scan/${current_date}/
-          cp -R ${{github.workspace}}/report_md.md reports/zap_baseline_scan/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
           git push origin develop
@@ -79,7 +83,6 @@ jobs:
   zap_full_scan:    
     name: 'zap_full_scan'
     runs-on: ubuntu-latest
-    needs: config_git
 
     steps:
       - name: Checkout
@@ -128,7 +131,6 @@ jobs:
   nikto:
     name: 'nikto'
     runs-on: ubuntu-latest
-    needs: config_git
 
     steps:
       - name: Create nikto report file
