--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -29,7 +29,7 @@ jobs:
   zap_baseline:
     name: 'zap_baseline_scan'
     runs-on: ubuntu-latest
-    needs: git_config
+    needs: config_git
 
     steps:
       - name: Checkout
