--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -73,7 +73,7 @@ jobs:
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/zap_baseline_scan/${current_date} && mkdir -p reports/zap_baseline_scan/${current_date}
           hour=$(date +'%Y-%m-%d_%H-%M-%S')
-          mv ${{github.workspace}}/report_json.json reports/zap_baseline_scan/${current_date}/report_json_${hour}.json
+          mv ${{github.workspace}}/report_json.json ${{github.workspace}}/report_json_${hour}.json
           cp -R ${{github.workspace}}/report_json_${hour}.json reports/zap_baseline_scan/${current_date}/
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
