--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -39,6 +39,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: develop
+
+      - name: Restore Git Config from Cache
+        uses: actions/cache@v4
+        with:
+          path: /home/runner/.gitconfig
+          key: git-config
       
       # - name: Config GitHub
       #   run: |
@@ -51,7 +57,9 @@ jobs:
           token: ${{ secrets.TOKEN_GIT }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://hml-tcc-password-manager.vercel.app'
-          cmd_options: '-a'
+          cmd_options: >
+          - a
+          - j
           allow_issue_writing: 'true'
           artifact_name: 'zap_baseline_scan'
 
